# tarea4-ice-climbers

./: README.md
client/: .gitignore
client/javadocs/: Main.html  allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  package-summary.html  package-tree.html  search.html  serialized-form.html  type-search-index.js
client/javadocs/client/: Client.html  ClientFactory.html  IClient.html  ObserverClient.html  PlayerClient.html  package-summary.html  package-tree.html
client/javadocs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
client/javadocs/model/: Bloque.html  Fruta.html  Juego.html  Jugador.html  Obstacle.html  ObstacleType.html  Pterodactilo.html  Tile.html  TileType.html  (+2 more)
client/src/: Client.java  ClientFactory.java  IClient.java  Main.java  ObserverClient.java  PlayerClient.java
server/: .gitignore  CMakeLists.txt  SocketServer.c  SocketServer.h  main.c
server/juego/: Map.c  Map.h  Obstacle.c  Obstacle.h  ObstacleList.c  ObstacleList.h  Tile.c  Tile.h  acciones.c  acciones.h  bloque.c  bloque.h  constantes.h  fruta.c  fruta.h  juego.c  juego.h  jugador.c  jugador.h  mapa.c  mapa.h  nivel.c  nivel.h  obstaculo.c  obstaculo.h
server/red/: SocketServer.c  SocketServer.h  clientes.c  clientes.h  mensajes.c  mensajes.h  observer.c  observer.h
server/util/: constantes.h  log.c  log.h  tipos.h
(+42 files in other folders)
